--- a/src/index.css
+++ b/src/index.css
@@ -19,16 +19,20 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  padding: 3rem 0;
 }
 
 h1 {
@@ -36,7 +40,30 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+#root {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 100vh;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer {
+  line-height: 3rem;
+}
+
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -47,11 +74,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.action:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.action:focus,
+.action:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
