--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@ body {
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 3rem 0;
 }
 
@@ -80,6 +83,11 @@ footer {
 .action:focus,
 .action:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.posts {
+  padding: 0 1rem;
+  line-height: 2;
 }
 
 @media (prefers-color-scheme: light) {
