--- a/src/index.css
+++ b/src/index.css
@@ -86,8 +86,29 @@ footer {
 }
 
 .posts {
-  padding: 0 1rem;
-  line-height: 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  row-gap: 2rem;
+  list-style: none;
+  padding: 0;
+}
+
+.posts .post-card img {
+  max-width: 100%;
+  border-radius: 0.5rem;
+  transition: opacity 0.2s ease-in-out;
+  aspect-ratio: 16/9;
+}
+
+.posts .post-card img:hover {
+  opacity: 0.8;
+}
+
+.post-card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 @media (prefers-color-scheme: light) {
