--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ h1 {
 #root {
   max-width: 800px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -88,10 +88,16 @@ footer {
 .posts {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 1rem;
+  column-gap: 2rem;
   row-gap: 2rem;
   list-style: none;
   padding: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .posts {
+    grid-template-columns: 1fr;
+  }
 }
 
 .posts .post-card img {
